--- a/S.A. francia feltalalok/francia feltalalok.html
+++ b/S.A. francia feltalalok/francia feltalalok.html
@@ -30,5 +30,7 @@
 <p>A Lumière fivérek – elsősorban Louis technikai zsenialitásának köszönhetően számos fotográfiai újítást hajtottak végre, s mintegy 170 szabadalomnak lettek tulajdonosai. Közülük a leginkább figyelemre méltó az 1881-ben levédett száraz-lemezes eljárás volt, mellyel fontos lépést tettek a mozgókép-készítés felé.</p>
 <img src="kepek/Auguste és Louis Lumière.jpg" alt="Auguste és Louis Lumière" width="400" height="333">
 <img src="kepek/Cinematograph_Lumiere_advertisement_1895.jpg" alt="Cinematograph Lumiere advertisement" width="400" height="333">
+<p>forrás:</p>
+<a href="https://hu.wikipedia.org/wiki/Kateg%C3%B3ria:Francia_feltal%C3%A1l%C3%B3k">wikipédia</a>
 </body>
 </html>
