--- a/Orosz találmányok.html
+++ b/Orosz találmányok.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <p>Alekszandr Sztepanovics Popov - a rádió feltalálója</p>
-    <img src="https://i2.wp.com/zateevo.ru/userfiles/image/Geroi%20Rossii/PopovAS/popov_priemnik.jpg"> 
+    <img src="https://i2.wp.com/zateevo.ru/userfiles/image/Geroi%20Rossii/PopovAS/popov_priemnik.jpg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Alexander_Stepanovich_Popov.jpg/220px-Alexander_Stepanovich_Popov.jpg">
+    <p>Hátizsák ejtőernyő. </p>
+    <p>Kotelnikov Gleb Evgenievich</p>
+    <img src="https://i2.wp.com/zateevo.ru/userfiles/image/Geroi%20Rossii/Kotelnikov/kotelnikov07.jpg">
+    <p>SZÍNES FÉNYKÉP</p>
+    <p>Szergej Prokudin-Gorsky orosz fotós</p>
+    <img src="https://i.greatplainsparanormal.com/images/016/image-46479-7.jpg">
+    <p>VIDEÓ FELVEVŐ</p>
+    <p>Alekszandr Matvejevics Pontjatov</p>
+    <img src="https://i.greatplainsparanormal.com/images/016/image-46479-11.jpg">
+    <p>ELEKTROMOS AUTÓ</p>
+    <p>Ippolit Romanov</p>
+    <img src="https://i.greatplainsparanormal.com/images/016/image-46479-2.jpg">
+    </body>
 </body>
 </html>
