--- a/navbarTemplate.html
+++ b/navbarTemplate.html
@@ -25,6 +25,7 @@
                     <li><a href="Indiai feltalálók.html">India</a></li>
                     <li><a href="kinaifeltalalok.html">Kína</a></li>
                     <li><a href="angol.html">Anglia</a></li>
+                     <li><a href="Oroszország találmányok.html">Oroszország </a></li>
                 </ul>
             </li>
           </ul>
