--- a/navbarTemplate.html
+++ b/navbarTemplate.html
@@ -26,6 +26,7 @@
                     <li><a href="kinaifeltalalok.html">Kína</a></li>
                     <li><a href="angol.html">Anglia</a></li>
                      <li><a href="Oroszország találmányok.html">Oroszország </a></li>
+                    <li><a href="kanadai talalmanyok.html">Kanada</a></li>
                 </ul>
             </li>
           </ul>
