--- a/Orosz találmányok.html
+++ b/Orosz találmányok.html
@@ -7,6 +7,27 @@
     <title>Orosz találmányok</title>
 </head>
 <body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">Játék</a></li>
+            <li class="dropdown" style="float: right"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Országok<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="hungary.html">Magyarország</a></li>
+                    <li><a href="németország.html">Németország</a></li>
+                    <!-- <li><a href="#">Japán</a></li> -->
+                    <li><a href="kanadai talalmanyok.html">Kanada</a></li>
+                    <li><a href="francia feltalalok.html">Franciaország</a></li>
+                    <li><a href="Indiai feltalálók.html">India</a></li>
+                    <li><a href="kinaifeltalalok.html">Kína</a></li>
+                    <li><a href="angol.html">Anglia</a></li>
+                     <li><a href="Oroszország találmányok.html">Oroszország </a></li>
+                </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
     <p>Alekszandr Sztepanovics Popov - a rádió feltalálója</p>
     <img src="https://i2.wp.com/zateevo.ru/userfiles/image/Geroi%20Rossii/PopovAS/popov_priemnik.jpg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Alexander_Stepanovich_Popov.jpg/220px-Alexander_Stepanovich_Popov.jpg">
