--- a/hungary/hungary.html
+++ b/hungary/hungary.html
@@ -4,17 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Magyar feltalálók</title>
     <link rel="stylesheet" href="hungary_stilus.css">
 </head>
 <body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">Játék</a></li>
+            <li class="dropdown" style="float: right"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Országok<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="hungary.html">Magyarország</a></li>
+                    <li><a href="németország.html">Németország</a></li>
+                    <!-- <li><a href="#">Japán</a></li> -->
+                    <li><a href="kanadai talalmanyok.html">Kanada</a></li>
+                    <li><a href="francia feltalalok.html">Franciaország</a></li>
+                    <li><a href="Indiai feltalálók.html">India</a></li>
+                    <li><a href="kinaifeltalalok.html">Kína</a></li>
+                    <li><a href="angol.html">Anglia</a></li>
+                     <li><a href="Oroszország találmányok.html">Oroszország </a></li>
+                </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
     <h1 id="cim">Magyar feltalálók és találmányaik</h1>
     <div id="tarto">
         <div class="feltalalo">
-            <span>Bíró László</span>
+            <h2>Bíró László</h2>
+            <img src="Bíró_lászlo.jpg" alt="fotó">
         </div>
         <div class="talalmany">
-            <span>Golyóstoll</span>
+            <h2>Golyóstoll</h2>
 
         </div>
         <div class="feltalalo">
