--- a/hungary/hungary.html
+++ b/hungary/hungary.html
@@ -40,70 +40,80 @@
         </div>
         <div class="talalmany">
             <h2>Golyóstoll</h2>
-
+            <img src="golyóstoll.png" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Gábor Dénes</h2>
+            <img src="Dennis_Gabor.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Holográfia</h2>
-
+            <img src="hologram.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Puskás Tivadar</h2>
+            <img src="Tivadar_Puskas.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Telefonközpont, Telefonhírmondó</h2>
-
+            <img src="Telefonközpont_Telefonhírmondó.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Rubik Ernő</h2>
+            <img src="Rubik_Ernő.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Rubik-kocka</h2>
-
+            <img src="Rubik_kocka.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Teller Ede, Szilárd Leó</h2>
+            <img src="teller_ede.jpg" alt="fotó" id="teller">
+            <img src="Leo_Szilard.jpg" alt="fotó" id="leo">
         </div>
         <div class="talalmany">
             <h2>Nukleáris fegyver</h2>
-
+            <img src="nuke.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Jedlik Ányos</h2>
+            <img src="jedlik_ányos.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Villanymotor</h2>
-
+            <img src="villany_motor.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Szent-Györgyi Albert</h2>
+            <img src="albert.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>C-Vitamin</h2>
-
+            <img src="c_vitamin.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Kármán</h2>
+            <img src="kálmán.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Helikopter</h2>
-
+            <img src="helikopter.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Shwarz Dávid</h2>
+            <img src="David_schwarz.jpg" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Első alumínium szerkezetű léghajó</h2>
-
+            <img src="cultura-schwarz-leghajo.jpg" alt="fotó">
         </div>
         <div class="feltalalo">
             <h2>Goldmark Péter Károly</h2>
+            <img src="Goldmark_Pétár_Károly.png" alt="fotó">
         </div>
         <div class="talalmany">
             <h2>Színes televízió</h2>
-
+            <img src="Színes_televízió.jpg" alt="fotó">
         </div>
     </div>
 
